--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "browser-sync": "2.29.1",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "8.0.0",
+    "gulp-clean": "0.4.0",
     "gulp-concat": "2.6.1",
     "gulp-sass": "5.1.0",
     "gulp-uglify-es": "3.0.0",
