--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "gulp-concat": "2.6.1",
     "gulp-sass": "5.1.0",
     "gulp-uglify-es": "3.0.0",
-    "sass": "1.62.0",
-    "swiper": "9.2.3"
+    "sass": "1.62.0"
   }
 }
